// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj"
  htmlFor="test"
>
  <input
    checkbox={undefined}
    checked={undefined}
    className="ak al c am an ao ap"
    disabled={undefined}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="ak al c am an ao ap"
  >
    Test Toggle
  </span>
  <span
    active={undefined}
    className="a ak aq ar as at au av aw ax ay az ba bb bc n bd o be bf bg bh bi bj bk bl bm bn y bo z bp bq br bs bt"
  />
</label>
`;

exports[`should render 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #aaa
}

.j {
  cursor: pointer
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #9bca3e
}

.x::before {
  color: #fff
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ad::after {
  bottom: 0px
}

.ae::after {
  right: 0px
}

.af::after {
  text-align: center
}

.ag::after {
  width: 50%
}

.ah::after {
  line-height: 2.26667rem
}

.ai::after {
  background: #7c7c7c
}

.aj::after {
  color: #fff
}

.ak {
  position: absolute
}

.al {
  overflow: hidden
}

.am {
  padding: 0px
}

.an {
  border: 0px
}

.ao {
  outline: 0px
}

.ap {
  opacity: 0
}

.aq {
  z-index: 1
}

.ar {
  top: 0px
}

.as {
  bottom: 0px
}

.at {
  left: 0px
}

.au {
  width: 50%
}

.av {
  border: inherit
}

.aw {
  border-width: 0px
}

.ax {
  border-right-width: inherit
}

.ay {
  border-left-width: 0px
}

.az {
  background: #fff
}

.ba {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bb::before {
  border: 4px solid transparent
}

.bc::before {
  content: ''
}

.bd::before {
  height: 0px
}

.be::before {
  top: 50%
}

.bf::before {
  left: 50%
}

.bg::before {
  margin-top: -3px
}

.bh::before {
  width: 0px
}

.bi::before {
  border-left-color: transparent
}

.bj::before {
  border-right-color: inherit
}

.bk::before {
  margin-left: -10px
}

.bl::after {
  border: 4px solid transparent
}

.bm::after {
  border-left-color: inherit
}

.bn::after {
  content: ''
}

.bo::after {
  height: 0px
}

.bp::after {
  top: 50%
}

.bq::after {
  left: 50%
}

.br::after {
  margin-left: 2px
}

.bs::after {
  margin-top: -3px
}

.bt::after {
  width: 0px
}
"
`;

exports[`should render checked 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj"
  htmlFor="test"
>
  <input
    checkbox={undefined}
    checked={true}
    className="ak al c am an ao ap"
    disabled={undefined}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="ak al c am an ao ap"
  >
    Test Toggle
  </span>
  <span
    active={true}
    className="a ak aq ar as at au av aw ax ay az ba bb bc n bd o be bf bg bh bi bj bk bl bm bn y bo z bp bq br bs bt"
  />
</label>
`;

exports[`should render checked 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #aaa
}

.j {
  cursor: pointer
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #9bca3e
}

.x::before {
  color: #fff
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ad::after {
  bottom: 0px
}

.ae::after {
  right: 0px
}

.af::after {
  text-align: center
}

.ag::after {
  width: 50%
}

.ah::after {
  line-height: 2.26667rem
}

.ai::after {
  background: #7c7c7c
}

.aj::after {
  color: #fff
}

.ak {
  position: absolute
}

.al {
  overflow: hidden
}

.am {
  padding: 0px
}

.an {
  border: 0px
}

.ao {
  outline: 0px
}

.ap {
  opacity: 0
}

.aq {
  z-index: 1
}

.ar {
  top: 0px
}

.as {
  bottom: 0px
}

.at {
  left: 50%
}

.au {
  width: 50%
}

.av {
  border: inherit
}

.aw {
  border-width: 0px
}

.ax {
  border-right-width: 0px
}

.ay {
  border-left-width: inherit
}

.az {
  background: #fff
}

.ba {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bb::before {
  border: 4px solid transparent
}

.bc::before {
  content: ''
}

.bd::before {
  height: 0px
}

.be::before {
  top: 50%
}

.bf::before {
  left: 50%
}

.bg::before {
  margin-top: -3px
}

.bh::before {
  width: 0px
}

.bi::before {
  border-left-color: transparent
}

.bj::before {
  border-right-color: inherit
}

.bk::before {
  margin-left: -10px
}

.bl::after {
  border: 4px solid transparent
}

.bm::after {
  border-left-color: inherit
}

.bn::after {
  content: ''
}

.bo::after {
  height: 0px
}

.bp::after {
  top: 50%
}

.bq::after {
  left: 50%
}

.br::after {
  margin-left: 2px
}

.bs::after {
  margin-top: -3px
}

.bt::after {
  width: 0px
}
"
`;

exports[`should render disabled 1`] = `
<label
  className="a b c d e f g h i j k l m n o p q r s t u v w x y z ab ac ad ae af ag ah ai aj"
  htmlFor="test"
>
  <input
    checkbox={undefined}
    checked={true}
    className="ak al c am an ao ap"
    disabled={true}
    id="test"
    name="test"
    onBlur={undefined}
    onChange={[Function]}
    onFocus={undefined}
    type="checkbox"
  />
  <span
    className="ak al c am an ao ap"
  >
    Test Toggle
  </span>
  <span
    active={true}
    className="a ak aq ar as at au av aw ax ay az ba bb bc n bd o be bf bg bh bi bj bk bl bm bn y bo z bp bq br bs bt"
  />
</label>
`;

exports[`should render disabled 2`] = `
"
.a {
  display: block
}

.b {
  position: relative
}

.c {
  margin: 0px
}

.d {
  height: 2.26667rem
}

.e {
  width: 5.334rem
}

.f {
  border-radius: 2px
}

.g {
  border-width: 1px
}

.h {
  border-style: solid
}

.i {
  border-color: #7c7c7c
}

.j {
  cursor: not-allowed
}

.k {
  font-size: 0.86667rem
}

.l {
  margin-bottom: 0.38333em
}

.m {
  min-height: 1.22em
}

.n::before {
  display: block
}

.o::before {
  position: absolute
}

.p::before {
  top: 0px
}

.q::before {
  bottom: 0px
}

.r::before {
  width: 50%
}

.s::before {
  line-height: 2.26667rem
}

.t::before {
  text-align: center
}

.u::before {
  content: 'On'
}

.v::before {
  left: 0px
}

.w::before {
  background: #7c7c7c
}

.x::before {
  color: #dedede
}

.y::after {
  display: block
}

.z::after {
  position: absolute
}

.ab::after {
  content: 'Off'
}

.ac::after {
  top: 0px
}

.ad::after {
  bottom: 0px
}

.ae::after {
  right: 0px
}

.af::after {
  text-align: center
}

.ag::after {
  width: 50%
}

.ah::after {
  line-height: 2.26667rem
}

.ai::after {
  background: #7c7c7c
}

.aj::after {
  color: #dedede
}

.ak {
  position: absolute
}

.al {
  overflow: hidden
}

.am {
  padding: 0px
}

.an {
  border: 0px
}

.ao {
  outline: 0px
}

.ap {
  opacity: 0
}

.aq {
  z-index: 1
}

.ar {
  top: 0px
}

.as {
  bottom: 0px
}

.at {
  left: 50%
}

.au {
  width: 50%
}

.av {
  border: inherit
}

.aw {
  border-width: 0px
}

.ax {
  border-right-width: 0px
}

.ay {
  border-left-width: inherit
}

.az {
  background: #fff
}

.ba {
  transition: left 100ms ease;
  -webkit-transition: left 100ms ease;
  -moz-transition: left 100ms ease
}

.bb::before {
  border: 4px solid transparent
}

.bc::before {
  content: ''
}

.bd::before {
  height: 0px
}

.be::before {
  top: 50%
}

.bf::before {
  left: 50%
}

.bg::before {
  margin-top: -3px
}

.bh::before {
  width: 0px
}

.bi::before {
  border-left-color: transparent
}

.bj::before {
  border-right-color: inherit
}

.bk::before {
  margin-left: -10px
}

.bl::after {
  border: 4px solid transparent
}

.bm::after {
  border-left-color: inherit
}

.bn::after {
  content: ''
}

.bo::after {
  height: 0px
}

.bp::after {
  top: 50%
}

.bq::after {
  left: 50%
}

.br::after {
  margin-left: 2px
}

.bs::after {
  margin-top: -3px
}

.bt::after {
  width: 0px
}
"
`;
